--- a/valimar_front/public/index.html
+++ b/valimar_front/public/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +6,7 @@
   <title>Formulario de Varias Etapas</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
   <style>
     body {
       font-family: 'Roboto', sans-serif;
@@ -27,9 +27,17 @@
   </style>
 </head>
 <body>
-  <div id="app"></div>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <div id="app"></div> <!-- Vue se montará aquí -->
+
+  <!-- Incluir Vue.js -->
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
+
+  <!-- Incluir Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+  <!-- Si es necesario, agrega aquí tu script principal de Vue -->
+  <!-- <script src="path_to_your_vue_app.js"></script> -->
 </body>
 </html>
