--- a/valimar_front/public/index.html
+++ b/valimar_front/public/index.html
@@ -82,6 +82,7 @@
   </style>
   </head>
   <body>
+    <div id="app"></div>
     <!-- Incluir Vue.js -->
     <script
       src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
